Minimal content added to index.html

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseTwo">
+                     data-parent="#accordion2" href="#collapseThree">
                     How many markets can I participate in?
                   </a>
                 </div>
