Minimal content added to index.html

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     How many markets can I participate in?
                   </a>
                 </div>
-                <div id="collapseTwo" class="accordion-body collapse">
+                <div id="collapseThree" class="accordion-body collapse">
                   <div class="accordion-inner">
                     A player can participate in as many markets as they want, assuming they have the capitial to buy a single bundle.
                   </div>
